src/objects/DEN_Appointment__c.object
<CustomObject>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dentist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dentist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DEN_Appointment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DEN_Appointment</relationshipLabel>
        <relationshipName>DEN_Appointment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Oczekująca na potwierdzenie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zaakceptowana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odrzucona</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <label>DEN_Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DateTime__c</columns>
        <columns>Dentist__c</columns>
        <columns>Patient__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DEN_Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEN_Appointment</pluralLabel>
    <recordTypes>
        <fullName>Konsultacja</fullName>
        <active>true</active>
        <label>Konsultacja</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leczenie</fullName>
        <active>true</active>
        <label>Leczenie</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>